--- a/html/commitsContainer.html
+++ b/html/commitsContainer.html
@@ -12,7 +12,7 @@
     <div class="paginate-container" data-pjax="" data-html-cleaner-suppress-children="">
         <div class="BtnGroup" data-test-selector="pagination">
             <a rel="nofollow" class="btn btn-outline BtnGroup-item" aria-disabled="true" id="olderButton">
-                Load More
+                加载更多
             </a>
         </div>
     </div>
