--- a/html/branchSelection.html
+++ b/html/branchSelection.html
@@ -12,13 +12,13 @@
                 d="M11.75 2.5a.75.75 0 100 1.5.75.75 0 000-1.5zm-2.25.75a2.25 2.25 0 113 2.122V6A2.5 2.5 0 0110 8.5H6a1 1 0 00-1 1v1.128a2.251 2.251 0 11-1.5 0V5.372a2.25 2.25 0 111.5 0v1.836A2.492 2.492 0 016 7h4a1 1 0 001-1v-.628A2.25 2.25 0 019.5 3.25zM4.25 12a.75.75 0 100 1.5.75.75 0 000-1.5zM3.5 3.25a.75.75 0 111.5 0 .75.75 0 01-1.5 0z">
               </path>
             </svg>
-            <span class="css-truncate-target" data-menu-button="" id="branches-dropdown-button">All branches</span>
+            <span class="css-truncate-target" data-menu-button="" id="branches-dropdown-button">所有分支</span>
             <span class="dropdown-caret"></span>
           </summary>
           <div class="SelectMenu">
             <div class="SelectMenu-modal" id="branches-selection-menu">
               <header class="SelectMenu-header">
-                <span class="SelectMenu-title">Select branches to show</span>
+                <span class="SelectMenu-title">选择分支</span>
                 <button class="SelectMenu-closeButton" type="button" data-toggle-for="branch-select-menu"><svg
                     aria-label="Close menu" aria-hidden="false" role="img" height="16" viewBox="0 0 16 16" version="1.1"
                     width="16" data-view-component="true" class="octicon octicon-x">
@@ -34,7 +34,7 @@
                     prefetch-on-mouseover="" data-catalyst="">
 
                     <template data-target="ref-selector.fetchFailedTemplate">
-                      <div class="SelectMenu-message" data-index="{{ index }}">Could not load branches</div>
+                      <div class="SelectMenu-message" data-index="{{ index }}">无法加载分支</div>
                     </template>
                     <div data-target="ref-selector.listContainer" role="menu" class="SelectMenu-list "
                       data-pjax="#repo-content-pjax-container" data-turbo-frame="repo-content-turbo-frame"
@@ -52,7 +52,7 @@
                                 d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z">
                               </path>
                             </svg>
-                            <span class="flex-1 css-truncate css-truncate-overflow ">All branches</span>
+                            <span class="flex-1 css-truncate css-truncate-overflow ">所有分支</span>
                           </a>
                           <span></span>
                         </div>
@@ -71,14 +71,14 @@
                         </svg>
                         <span class="flex-1 css-truncate css-truncate-overflow {{ isFilteringClass }}">{{ refName
                           }}</span>
-                        <span hidden="{{ isNotDefault }}" class="Label Label--secondary flex-self-start">default</span>
+                        <span hidden="{{ isNotDefault }}" class="Label Label--secondary flex-self-start">默认</span>
                       </a>
                     </template>
                     <footer class="SelectMenu-footer">
                       <a class="Button--primary Button--medium Button btn-block mb-2"
                         data-toggle-for="branch-select-menu" id="branch-filter-button" style="justify-content: center;">
-                        <span class="Button-label"><span class="d-none d-md-block">Show selected branches</span>
-                          <span class="d-block d-md-none">Apply</span></span>
+                        <span class="Button-label"><span class="d-none d-md-block">显示选择的分支</span>
+                          <span class="d-block d-md-none">应用</span></span>
                       </a>
                     </footer>
                   </ref-selector>
@@ -99,7 +99,7 @@
             <circle cx="7" cy="8" r="7" stroke="#fd7f6f" fill="#00000000"
               legendsha="9df9bc09cea4f00ff2aa11ad91a7055310cd660b" id="outsideCircle"></circle>
           </svg>
-          <span class="css-truncate-target" data-menu-button="" id="branchName">Loading...</span>
+          <span class="css-truncate-target" data-menu-button="" id="branchName">加载中...</span>
         </summary>
       </div>
     </div>
