--- a/html/hoverCard.html
+++ b/html/hoverCard.html
@@ -12,7 +12,7 @@
             <div class="f6 d-flex flex-items-center p-2 width-full" data-team-hovercards-enabled="">
               <div class="user-status-message-wrapper f6 color-fg-default ws-normal lh-condensed commit-time-message"
                 id="commit-time-message">
-                Commited on 24 October 2022 at 03:14 PM
+                提交于2022年10月24日15:14 
               </div>
             </div>
           </div>
@@ -22,7 +22,7 @@
             <div class="f6 d-flex flex-items-center pl-2 pr-2 pt-1 pb-1 width-full" data-team-hovercards-enabled="">
               <div class="user-status-message-wrapper f6 color-fg-default ws-normal lh-condensed text-bold"
                 id="head-indication-content">
-                Head of
+                头部：
                 <p class="tag-container branch-name-container">
                   <svg text="green" aria-hidden="true" height="14" viewBox="0 0 14 14" version="1.1" width="14"
                     data-view-component="true" class="octicon octicon-git-branch">
@@ -41,7 +41,7 @@
             <div class="f6 d-flex flex-items-center pl-2 pr-2 pb-2 pt-2 width-full" data-team-hovercards-enabled="">
               <div class="user-status-message-wrapper f6 color-fg-default ws-normal lh-condensed text-bold parent-text"
                 id="parent-indication-content">
-                Parent :
+                父 :
                 <p class="tag-container commit-id-container">
                   <svg text="green" aria-hidden="true" height="14" viewBox="0 0 14 14" version="1.1" width="14"
                     data-view-component="true" class="octicon octicon-git-branch">
@@ -82,14 +82,14 @@
                     d="M13.25 2.5H2.75a.25.25 0 00-.25.25v10.5c0 .138.112.25.25.25h10.5a.25.25 0 00.25-.25V2.75a.25.25 0 00-.25-.25zM2.75 1h10.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0113.25 15H2.75A1.75 1.75 0 011 13.25V2.75C1 1.784 1.784 1 2.75 1zM8 4a.75.75 0 01.75.75v2.5h2.5a.75.75 0 010 1.5h-2.5v2.5a.75.75 0 01-1.5 0v-2.5h-2.5a.75.75 0 010-1.5h2.5v-2.5A.75.75 0 018 4z">
                   </path>
                 </svg>
-                <a style="color: var(--color-fg-default) !important;" id="addition-count"></a> additions
+                <a style="color: var(--color-fg-default) !important;" id="addition-count"></a> 添加
                 <svg title="deleted" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
                   data-view-component="true" class="octicon octicon-diff-removed color-fg-danger ml-2">
                   <path fill-rule="evenodd"
                     d="M2.75 2.5h10.5a.25.25 0 01.25.25v10.5a.25.25 0 01-.25.25H2.75a.25.25 0 01-.25-.25V2.75a.25.25 0 01.25-.25zM13.25 1H2.75A1.75 1.75 0 001 2.75v10.5c0 .966.784 1.75 1.75 1.75h10.5A1.75 1.75 0 0015 13.25V2.75A1.75 1.75 0 0013.25 1zm-2 7.75a.75.75 0 000-1.5h-6.5a.75.75 0 000 1.5h6.5z">
                   </path>
                 </svg>
-                <a style="color: var(--color-fg-default) !important;" id="deletion-count"></a> deletions
+                <a style="color: var(--color-fg-default) !important;" id="deletion-count"></a> 删除
 
               </div>
             </div>
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="sr-only">
-        Press escape to close this hovercard
+        按下 Esc 关闭浮动卡片
       </div>
     </div>
   </div>
